--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,8 @@ html {
 *, *::before, *::after {
     box-sizing: inherit;
 }
-a {
-    color: #000000;
-    display: inline-block;
-    text-decoration: none;
+body {
+    font-family: 'Lato', sans-serif;
 }
 ul {
     list-style: none;
@@ -17,7 +15,11 @@ ul {
 li {
     display: inline-block;
 }
-
+a {
+    color: #000000;
+    display: inline-block;
+    text-decoration: none;
+}
 .container {
     max-width: 1030px;
     margin: 0 auto;
@@ -25,6 +27,7 @@ li {
 }
 .header {
     background-color: #E8EBF1;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.07);
 }
 .header__inner {
     display: flex;
@@ -34,7 +37,6 @@ li {
 }
 .header__logo a {
     color: #2AACC8;
-    font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 50px;
     line-height: 27px;    
@@ -62,6 +64,7 @@ li {
     position: relative;
 }
 .drop-down__list {
+    z-index: 1;
     display: none;
     position: absolute;
     width: 200px;
@@ -106,7 +109,7 @@ li {
 .header__drop-down>a::after {
     content: "";
     position: absolute;
-    background-image: url(/images/down-arrow.png);
+    background-image: url(../images/down-arrow.png);
     width: 7px;
     height: 5px;
     right: 9px;
@@ -121,3 +124,69 @@ li {
     border-top: 5px solid #2AACC8;
     transition: all 0.3s;
 }
+.slider {
+background-color: #81E4ED;
+padding: 20px 0 10px;
+}
+.slider__inner {}
+
+.slider__item {
+    background-image: url(../images/slider-bg.jpg);
+    min-height: 440px;
+    background-position: top center;
+    box-sizing: cover;
+    background-repeat: no-repeat;
+}
+.slider__item-text {
+    width: 300px;
+    font-size: 50px;
+    font-weight: 700;
+    color: #FFFFFF;
+    margin-left: 60px;
+    padding-top: 100px;
+}
+/*jquery*/
+.slick-dots li button {
+width: 14px;
+height: 14px;
+background-color: rgba(98, 98, 98, 0.5);
+border-radius: 50%;
+}
+.slick-dots li.slick-active button {
+    width: 14px;
+    height: 14px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+}
+.slick-dots li button::before {
+    display: none;
+}
+.slick-dots li {
+    margin: 0 9px;
+    width: auto;
+    height: auto;
+}
+.items {
+    background-color: #E8EBF1;
+    padding: 60px 0 50px;
+}
+.items__inner {
+    display: flex;
+    justify-content: space-between;
+}
+.item {
+    width: 225px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.item__title {
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 20px;
+    text-transform: uppercase;
+    padding: 10px 0 0 60px;
+    margin-bottom: 30px;
+}
+
+.item__icons {}
+
+.item__text {}
