sections items+works, jquery

--- a/css/style.css
+++ b/css/style.css
@@ -1,192 +1,306 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-*, *::before, *::after {
-    box-sizing: inherit;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 body {
-    font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+  line-height: 20px;
+  font-size: 15px;
 }
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 li {
-    display: inline-block;
+  display: inline-block;
 }
 a {
-    color: #000000;
-    display: inline-block;
-    text-decoration: none;
+  color: #000000;
+  display: inline-block;
+  text-decoration: none;
 }
 .container {
-    max-width: 1030px;
-    margin: 0 auto;
-    padding: 0 15px;
+  max-width: 1030px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 .header {
-    background-color: #E8EBF1;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.07);
+  background-color: #e8ebf1;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.07);
 }
 .header__inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 36px 0 47px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 36px 0 47px 0;
 }
 .header__logo a {
-    color: #2AACC8;
-    font-weight: 400;
-    font-size: 50px;
-    line-height: 27px;    
+  color: #2aacc8;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 27px;
 }
 .header__logo a span {
-    color: #000000;
-    font-weight: 900;
+  color: #000000;
+  font-weight: 900;
 }
 .header__menu {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 .header__menu li + li {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 .header__menu a {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    font-size: 13px;
-    line-height: 20px;
-    text-transform: uppercase;
-    padding-top: 11px;
-    padding-bottom: 13px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  font-size: 13px;
+  text-transform: uppercase;
+  padding-top: 11px;
+  padding-bottom: 13px;
 }
 .header__drop-down {
-    position: relative;
+  position: relative;
 }
 .drop-down__list {
-    z-index: 1;
-    display: none;
-    position: absolute;
-    width: 200px;
-    background-color: #FFFFFF;
-    border: 1px solid #E8EBF1;
-    border-top: none;    
-    border-bottom: 5px solid #2AACC8;
-    box-shadow: 0px 5px 0px #2AACC8;
-    padding: 10px 5px;
+  z-index: 1;
+  display: none;
+  position: absolute;
+  width: 200px;
+  background-color: #ffffff;
+  border: 1px solid #e8ebf1;
+  border-top: none;
+  border-bottom: 5px solid #2aacc8;
+  box-shadow: 0px 5px 0px #2aacc8;
+  padding: 10px 5px;
 }
 .drop-down__list a {
-    padding: 12px 0 12px 11px;
-    font-weight: 400;
-    text-transform: none;
-    display: block;
+  padding: 12px 0 12px 11px;
+  font-weight: 400;
+  text-transform: none;
+  display: block;
 }
 .header__drop-down .drop-down__list li {
-    margin-left: 0;
-    display: block;
+  margin-left: 0;
+  display: block;
 }
-.drop-down__list li+li a {
-    border-top: 1px solid #E7E7E7;
+.drop-down__list li + li a {
+  border-top: 1px solid #e7e7e7;
 }
 .drop-down__list a:hover {
-    color: #2AACC8;
+  color: #2aacc8;
 }
 .header__drop-down.drop-down {
-    margin-left: 39px;
+  margin-left: 39px;
 }
 .header__drop-down.drop-down + .header__drop-down.drop-down {
-    margin-left: 12px;
+  margin-left: 12px;
 }
 .header__drop-down.drop-down + .header__link-blog {
-    margin-left: 20px;
+  margin-left: 20px;
 }
-.header__drop-down>a {
-    position: relative;
-    border-top: 5px solid transparent;
-    padding-left: 11px;
-    padding-right: 26px;
+.header__drop-down > a {
+  position: relative;
+  border-top: 5px solid transparent;
+  padding-left: 11px;
+  padding-right: 26px;
 }
-.header__drop-down>a::after {
-    content: "";
-    position: absolute;
-    background-image: url(../images/down-arrow.png);
-    width: 7px;
-    height: 5px;
-    right: 9px;
-    top: 17px;
+.header__drop-down > a::after {
+  content: "";
+  position: absolute;
+  background-image: url(../images/down-arrow.png);
+  width: 7px;
+  height: 5px;
+  right: 9px;
+  top: 17px;
 }
 .header__drop-down.drop-down:hover .drop-down__list {
-    display: block;
+  display: block;
 }
 .header__drop-down.drop-down:hover > a {
-    color: #2AACC8;
-    background-color: #FFFFFF;
-    border-top: 5px solid #2AACC8;
-    transition: all 0.3s;
+  color: #2aacc8;
+  background-color: #ffffff;
+  border-top: 5px solid #2aacc8;
+  transition: all 0.3s;
 }
 .slider {
-background-color: #81E4ED;
-padding: 20px 0 10px;
+  background-color: #81e4ed;
+  padding: 20px 0 10px;
 }
-.slider__inner {}
+.slider__inner {
+}
 
 .slider__item {
-    background-image: url(../images/slider-bg.jpg);
-    min-height: 440px;
-    background-position: top center;
-    box-sizing: cover;
-    background-repeat: no-repeat;
+  background-image: url(../images/slider-bg.jpg);
+  min-height: 440px;
+  background-position: top center;
+  box-sizing: cover;
+  background-repeat: no-repeat;
 }
 .slider__item-text {
-    width: 300px;
-    font-size: 50px;
-    font-weight: 700;
-    color: #FFFFFF;
-    margin-left: 60px;
-    padding-top: 100px;
+  width: 300px;
+  font-size: 50px;
+  line-height: 55px;
+  font-weight: 700;
+  color: #ffffff;
+  margin-left: 60px;
+  padding-top: 100px;
 }
 /*jquery*/
 .slick-dots li button {
-width: 14px;
-height: 14px;
-background-color: rgba(98, 98, 98, 0.5);
-border-radius: 50%;
+  width: 14px;
+  height: 14px;
+  background-color: rgba(98, 98, 98, 0.5);
+  border-radius: 50%;
 }
 .slick-dots li.slick-active button {
-    width: 14px;
-    height: 14px;
-    background-color: #FFFFFF;
-    border-radius: 50%;
+  width: 14px;
+  height: 14px;
+  background-color: #ffffff;
+  border-radius: 50%;
 }
 .slick-dots li button::before {
-    display: none;
+  display: none;
 }
 .slick-dots li {
-    margin: 0 9px;
-    width: auto;
-    height: auto;
+  margin: 0 9px;
+  width: auto;
+  height: auto;
 }
 .items {
-    background-color: #E8EBF1;
-    padding: 60px 0 50px;
+  background-color: #e8ebf1;
+  padding: 60px 0 50px;
+  border: 1px solid #d9d9d9;
 }
 .items__inner {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 .item {
-    width: 225px;
-    font-family: Arial, Helvetica, sans-serif;
+  width: 225px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .item__title {
-    font-size: 15px;
-    font-weight: 700;
-    line-height: 20px;
-    text-transform: uppercase;
-    padding: 10px 0 0 60px;
-    margin-bottom: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 10px 0 0 50px;
+  margin-bottom: 30px;
+  position: relative;
 }
-
-.item__icons {}
-
-.item__text {}
+.item__icons {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-color: #2aacc8;
+  border-radius: 50%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* .item__icons img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
+.item__text {
+  font-style: 13px;
+  color: #3636363;
+  margin-bottom: 25px;
+}
+.item__link {
+  padding-left: 15px;
+  font-size: 13px;
+  color: #2aacc8;
+  position: relative;
+}
+.item__link::before {
+  content: "";
+  position: absolute;
+  background-image: url(../images/icons/arrow.svg);
+  width: 5px;
+  height: 7px;
+  top: 5px;
+  left: 0px;
+}
+.works {
+}
+.works__title {
+  padding: 25px 0px 5px 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  position: relative;
+}
+.works__title::before {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  content: "";
+  background-image: url(../images/sliders/cursor.svg);
+  width: 14px;
+  height: 24px;
+}
+.works__inner {
+  padding: 20px 0px 40px;
+  border-top: 1px solid #dfe1e5;
+  border-bottom: 1px solid #dfe1e5;
+}
+.works__inner-item {
+}
+.slick-arrow {
+  width: 20px;
+  height: 20px;
+  background-color: #81e4ed;
+  border-radius: 50%;
+}
+.slick-arrow::before {
+  display: none;
+}
+.slick-arrow:hover,
+.slick-arrow:focus {
+  background-color: #81e4ed;
+}
+.slick-prev {
+  left: auto;
+  top: -27px;
+  right: 31px;
+}
+.slick-next {
+  top: -27px;
+  right: 0;
+}
+.works__inner-item {
+  text-align: center;
+}
+.works__inner-box {
+  display: inline-block;
+  position: relative;
+}
+.works__inner-link {
+  background-color: #2aacc8;
+  height: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  transition: all 0.5s;
+}
+.works__inner-link a {
+  margin: 0 15px;
+}
+.works__inner-box:hover .works__inner-link {
+  height: 80px;
+}
+.slick-list {
+  margin: 0 -15px;
+}
