--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,15 @@ a {
   align-items: center;
   padding: 36px 0 47px 0;
 }
-.header__logo a {
+.header__logo a,
+.footer__logo a {
   color: #2aacc8;
   font-weight: 400;
   font-size: 50px;
   line-height: 27px;
 }
-.header__logo a span {
+.header__logo a span,
+.footer__logo a span {
   color: #000000;
   font-weight: 900;
 }
@@ -131,9 +133,6 @@ a {
   background-color: #81e4ed;
   padding: 20px 0 10px;
 }
-.slider__inner {
-}
-
 .slider__item {
   background-image: url(../images/slider-bg.jpg);
   min-height: 440px;
@@ -211,7 +210,7 @@ a {
 } */
 .item__text {
   font-style: 13px;
-  color: #3636363;
+  color: #363636;
   margin-bottom: 25px;
 }
 .item__link {
@@ -228,8 +227,6 @@ a {
   height: 7px;
   top: 5px;
   left: 0px;
-}
-.works {
 }
 .works__title,
 .testimonials__title,
@@ -255,8 +252,6 @@ a {
   padding: 20px 0px 40px;
   border-top: 1px solid #dfe1e5;
   border-bottom: 1px solid #dfe1e5;
-}
-.works__inner-item {
 }
 .slick-arrow {
   width: 20px;
@@ -340,14 +335,6 @@ a {
   font-weight: 700;
   font-style: italic;
 }
-.testimonials__title {
-}
-.clients__logo {
-}
-.clients__logo-title {
-}
-.clients__logo-images {
-}
 .download {
   margin-top: 40px;
   padding: 30px 40px 30px 30px;
@@ -389,4 +376,78 @@ a {
   height: 25px;
   top: 16px;
   left: 25px;
+}
+.footer {
+  background-color: #e8ebf1;
+  padding: 30px 0 40px;
+  border: 1px solid #d9d9d9;
+}
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 35px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.footer__item-content {
+  width: 240px;
+}
+.footer__item-title {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.footer__item-text {
+  padding-top: 25px;
+  font-size: 14px;
+  color: #363636;
+}
+.footer__item-list {
+  width: 115px;
+}
+.footer__list {
+  padding-top: 10px;
+}
+.footer__list li {
+  display: block;
+}
+.footer__list a {
+  font-size: 14px;
+  line-height: 26px;
+  color: #363636;
+}
+.footer__item-contact {
+  width: 150px;
+}
+.footer__adress {
+  padding-top: 25px;
+  margin-bottom: 16px;
+  font-size: 14px;
+  color: #363636;
+}
+.footer__adress span {
+  display: block;
+  font-weight: 700;
+}
+.footer__phone {
+  font-size: 14px;
+  color: #363636;
+}
+.footer__item-social {
+  width: 185px;
+}
+.footer__social {
+  padding-top: 25px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.footer__bottom {
+  display: flex;
+  justify-content: space-between;
+}
+.footer__copy {
+  max-width: 650px;
+  font-size: 13px;
+  line-height: 18px;
+  color: #363636;
+  font-family: Arial, Helvetica, sans-serif;
 }
